# trunk

./: .gitignore  README.md  test.c
AYBC/: queue.h  server.h
AYBC/client/: Makefile  client.c  client.h  convert.c  convert.h  encoder.c  encoder.h  test.c  test.h264  videoCapture.h
AYBC/decoder/: Makefile  decoder.c  decoder.h  server.c  test.c
AYBC/doc/: AYBC.uml  系统架构.vsd  项目文档.txt
asm/align/: align_arm.S  align_arm1.S  align_x86.S
asm/printf/: Makefile  printf.S
audio/v1.1/: Makefile  alsa-play  pl_pcm.c  pl_pcm.h  wave.h
cmake/notes/: cmake_syntax.md  introduction.md
cmake/projects/test03/: CMakeLists.txt
driver/char/: Makefile  cdev.txt.c  syscall.c  test.c
flyfish/: Makefile
flyfish/doc/: API.c  assignment  bugs.txt  项目描述.txt
flyfish/include/: barrier.h  debug.h  fish.h  gameover.h  image.h  init.h  keyevent.h  music.h  public.h
flyfish/src/: Makefile  barrier.c  fish.c  gameover.c  image.c  init.c  main.c  music.c
interview/c/: factorial_recursive.c  fork.c  int_to_ascii.c  integer_inverted_order.c  swap.c
libc/: readme.txt
libc/basic/: usage.c
libc/bmp/: Makefile  bmp.c  bmp.h  test.c
libc/broadcast/: recv  recv_test.c  recvbroadcast.c  recvbroadcast.h  send  send_test.c  sendbroadcast.c  sendbroadcast.h
libc/dir/: dir  dir.c  dir.h
libc/dup/: main.c
libc/epoll/: epoll-example.c  test_epoll.c
libc/fft/: fft  fft.c  fft.h  test.c
libc/file/: file  file.c  file.h  main.c  test.txt  tfcard.c  tfcard.h
libc/framebuffer/: framebuffer.h
libc/ipc/: note4.txt
libc/mutex/: xmg_mutex.c  xmg_mutex.h
libc/myifttt/: PiRobot IFTTT datastrucure temp11.4.2015.docx  common.h  ifttt.h  input.h  output.h  readme.txt  status.h
libc/process/: deamon.c  note.txt  zombie.c
libc/pthread/: main.c
libc/queue/: queue.c
libc/scriptitem/: config  config.c  config.h
libc/semaphore/: main.c  mutexSem.c  mutexSem.h  rmmutexsem  sem  test  test_opensem.c  test_rmsem.c
libc/sharememory/: mutexsem.c  testrmshm.c
libc/signal/: note.txt  signal.c
libc/sort/: sort.c
libc/stack/: stack.c
libc/string/: ctype.c  ctype.h  main.c  string.c  vsprintf.c
libc/terminal_escape_sequences/: tes.c
libc/wave/: wave.c  wave.h
libc/weak/: main.c  strong.c
libevent/libevent-2.0.20-stable/: Makefile  config.h  config.status  libevent.la  libevent.pc  libevent_core.la  libevent_extra.la  libtool  (+3 more)
makefile_project/: README
qt/: .gitignore
testCmake/: CMakeLists.txt  main.cpp
testCmake/cmake/templates/: hello.h.in
tool/: README
(+678 files in other folders)
